# qq

./: README.md  pyproject.toml  qq.py
qq/: main.py
