[tool.poetry]
name = "qq"
version = "0.1.0"
description = "qq cli explainer"
authors = ["abizer <abizer@abizer.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litellm = "^1.40.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
